8014447: Object.hashCode intrinsic breaks inline caches

Try to inline as normal method first, then fall back to intrinsic.

Reviewed-by: kvn, twisti